namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personalize-domain-dev
  labels:
    istio-injection: enabled
