service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: personalize-domain
    tier: back-end
    version: v1
  name: personalize-domain-svc
  namespace: personalize-domain-dev
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: personalize-domain
  type: ClusterIP
