virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: personalize-service-vs
  namespace: personalize-domain-dev
spec:
  gateways:
    - internal-gateway-dev/superapp-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: personalize-domain-svc
            port:
              number: 3000
      match:
        - uri:
            prefix: /personalize
